--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,4 +10,20 @@
 		<module>cxf</module>
 		<module>simpleweb</module>
 	</modules>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-codegen-plugin</artifactId>
+					<version>3.1.12</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.axis2</groupId>
+					<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
+					<version>1.7.5</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
