--- a/parent/cxf/pom.xml
+++ b/parent/cxf/pom.xml
@@ -25,8 +25,8 @@
 							<wsdlOptions>
 <!-- 								<wsdlOption><wsdl>http://localhost:8080/JavaFirstSpringSupport/services/HelloWorld?wsdl</wsdl></wsdlOption> -->
 								<wsdlOption><wsdl>http://localhost:8081/java_first_spring_support/services/HelloWorld?wsdl</wsdl></wsdlOption>
-								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/JobRecomm.0.0?wsdl</wsdl></wsdlOption>
-								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/AccessRecordService.0.0?wsdl</wsdl></wsdlOption>
+<!-- 								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/JobRecomm.0.0?wsdl</wsdl></wsdlOption> -->
+<!-- 								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/AccessRecordService.0.0?wsdl</wsdl></wsdlOption> -->
 <!-- 								<wsdlOption><wsdl>http://172.19.7.194:9763/services/0.0.3/AccessRecordService?wsdl</wsdl></wsdlOption> -->
 							</wsdlOptions>
 						</configuration>
