--- a/parent/simpleweb/pom.xml
+++ b/parent/simpleweb/pom.xml
@@ -11,8 +11,8 @@
 	<dependencies>
 		<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId><version>1.2</version></dependency>
 		<dependency><groupId>junit</groupId><artifactId>junit</artifactId><version>3.8.1</version><scope>test</scope></dependency>
-<!-- 		<dependency><groupId>ch.test</groupId><artifactId>axis2</artifactId><version>0.0.1-SNAPSHOT</version></dependency> -->
+		<dependency><groupId>ch.test</groupId><artifactId>axis2</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 <!-- 		<dependency><groupId>ch.test</groupId><artifactId>cxf</artifactId><version>0.0.1-SNAPSHOT</version></dependency> -->
-			<dependency><groupId>ch.util</groupId><artifactId>crc</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
+		<dependency><groupId>ch.util</groupId><artifactId>crc</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 	</dependencies>
 </project>
