--- a/parent/cxf/pom.xml
+++ b/parent/cxf/pom.xml
@@ -28,6 +28,7 @@
 								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/JobRecomm.0.0?wsdl</wsdl></wsdlOption>
 								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/AccessRecordService.0.0?wsdl</wsdl></wsdlOption>
 <!-- 								<wsdlOption><wsdl>http://172.19.7.194:9763/services/0.0.3/AccessRecordService?wsdl</wsdl></wsdlOption> -->
+								<wsdlOption><wsdl>http://intesb.cloud.s104.com.tw/services/MongoService.0.0?wsdl</wsdl></wsdlOption>
 							</wsdlOptions>
 						</configuration>
 						<goals>
