--- a/parent/simpleweb/pom.xml
+++ b/parent/simpleweb/pom.xml
@@ -15,5 +15,6 @@
 <!-- 		<dependency><groupId>ch.test</groupId><artifactId>cxf</artifactId><version>0.0.1-SNAPSHOT</version></dependency> -->
 		<dependency><groupId>ch.util</groupId><artifactId>crc</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 		<dependency><groupId>ch.test</groupId><artifactId>http</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
+		<dependency><groupId>ch.test</groupId><artifactId>mongodb</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 	</dependencies>
 </project>
