--- a/parent/simpleweb/pom.xml
+++ b/parent/simpleweb/pom.xml
@@ -16,5 +16,6 @@
 		<dependency><groupId>ch.util</groupId><artifactId>crc</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 		<dependency><groupId>ch.test</groupId><artifactId>http</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 		<dependency><groupId>ch.test</groupId><artifactId>mongodb</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
+		<dependency><groupId>ch.test</groupId><artifactId>redis</artifactId><version>0.0.1-SNAPSHOT</version></dependency>
 	</dependencies>
 </project>
