--- a/parent/cxf/pom.xml
+++ b/parent/cxf/pom.xml
@@ -10,6 +10,8 @@
 	</parent>
 	<dependencies>
 		<dependency><groupId>junit</groupId><artifactId>junit</artifactId><version>3.8.1</version><scope>test</scope></dependency>
+		<dependency><groupId>net.sf.json-lib</groupId><artifactId>json-lib</artifactId><version>2.4</version><classifier>jdk15</classifier></dependency>
+		<dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>2.5.1</version></dependency>
 	</dependencies>
 	<build>
 		<plugins>
