--- a/parent/axis2/pom.xml
+++ b/parent/axis2/pom.xml
@@ -15,6 +15,8 @@
 		<dependency><groupId>org.apache.axis2</groupId><artifactId>axis2-transport-local</artifactId><version>1.7.5</version></dependency>
 		<dependency><groupId>org.apache.axis2</groupId><artifactId>axis2-transport-http</artifactId><version>1.7.5</version></dependency>
 		<dependency><groupId>org.apache.axis2</groupId><artifactId>axis2-jaxws</artifactId><version>1.7.5</version></dependency>
+		<dependency><groupId>net.sf.json-lib</groupId><artifactId>json-lib</artifactId><version>2.4</version><classifier>jdk15</classifier></dependency>
+		<dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>2.5.1</version></dependency>
 	</dependencies>
 	<build>
 		<plugins>
