0719- parent.pom add repositories

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,4 +26,10 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://central.maven.org/maven2/</url>
+		</repository>
+	</repositories>
 </project>
