0809-add DemoTest, TestDemo*2, TestGit*2

--- a/parent/axis2/pom.xml
+++ b/parent/axis2/pom.xml
@@ -33,6 +33,7 @@
 							<databindingName>xmlbeans</databindingName>
 						</configuration>
 					</execution>
+<!--
 					<execution>
 						<id>wsdl2</id>
 						<goals><goal>wsdl2code</goal></goals>
@@ -41,6 +42,7 @@
 							<databindingName>xmlbeans</databindingName>
 						</configuration>
 					</execution>
+-->
 					<execution>
 						<id>wsdl3</id>
 						<goals><goal>wsdl2code</goal></goals>
@@ -64,6 +66,22 @@
 						<goals><goal>wsdl2code</goal></goals>
 						<configuration>
 							<wsdlFile>http://intesb.cloud.s104.com.tw/services/MongoService.0.0?wsdl</wsdlFile>
+							<databindingName>xmlbeans</databindingName>
+						</configuration>
+					</execution>
+					<execution>
+						<id>wsdl5</id>
+						<goals><goal>wsdl2code</goal></goals>
+						<configuration>
+							<wsdlFile>http://172.19.7.194:9763/services/0.9.0/TestAopService?wsdl</wsdlFile>
+							<databindingName>xmlbeans</databindingName>
+						</configuration>
+					</execution>
+					<execution>
+						<id>wsdl6</id>
+						<goals><goal>wsdl2code</goal></goals>
+						<configuration>
+							<wsdlFile>http://172.19.7.194:9763/services/0.9.0/DemoService?wsdl</wsdlFile>
 							<databindingName>xmlbeans</databindingName>
 						</configuration>
 					</execution>
