--- a/parent/cxf/pom.xml
+++ b/parent/cxf/pom.xml
@@ -12,6 +12,7 @@
 		<dependency><groupId>junit</groupId><artifactId>junit</artifactId><version>3.8.1</version><scope>test</scope></dependency>
 		<dependency><groupId>net.sf.json-lib</groupId><artifactId>json-lib</artifactId><version>2.4</version><classifier>jdk15</classifier></dependency>
 		<dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>2.5.1</version></dependency>
+		<dependency><groupId>commons-httpclient</groupId><artifactId>commons-httpclient</artifactId><version>3.1</version></dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -35,6 +36,7 @@
 <!-- Underscores can only be used with source level 1.7 or greater	002_002fAccessRecordService.java -->
 <!-- 								<wsdlOption><wsdl>http://172.19.7.194:9763/services/0.0.3/AccessRecordService?wsdl</wsdl></wsdlOption> -->
 								<wsdlOption><wsdl>http://intesb.cloud.s104.com.tw/services/MongoService.0.0?wsdl</wsdl></wsdlOption>
+								<wsdlOption><wsdl>http://esb.cloud.s104.com.tw/services/BeachBoy.0.0?wsdl</wsdl></wsdlOption>
 							</wsdlOptions>
 						</configuration>
 						<goals>
